# mav_trajectory_generation

./: CMakeLists.txt  README.md  test_poly.cpp
mav_trajectory_generation/include/mav_trajectory_generation/: polynomial.h  polynomial_optimization_linear.h  segment.h  trajectory.h  vertex.h
mav_trajectory_generation/include/mav_trajectory_generation/impl/: polynomial_optimization_linear_impl.h
mav_trajectory_generation/src/: polynomial.cpp  segment.cpp  vertex.cpp
